# backend/src/api/v1/auth/controllers/index.js
@@ -1,4 +1,6 @@
 const register = require("./register");
 const login = require("./login");
+const logout = require("./logout");
+const refreshToken = require("./refreshToken");
 
-module.exports = { register, login };
+module.exports = { register, login, refreshToken, logout };
