# backend/src/api/v1/auth/controllers/logout.js
@@ -1,0 +1,31 @@
+const { User } = require("../../../../model");
+
+const logout = async (req, res, next) => {
+  try {
+    console.log("user", req.user.id);
+
+    const userId = req.user?.id;
+
+    if (!userId) {
+      return res.status(401).json({
+        code: 401,
+        message: "User not found",
+      });
+    }
+
+    // Remove refresh token from DB
+    await User.findByIdAndUpdate(userId, {
+      refreshToken: null,
+      refreshTokenExpiresAt: null,
+    });
+
+    res.status(200).json({
+      code: 200,
+      message: "Logged out successfully",
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+module.exports = logout;
