# backend/src/model/User.js
@@ -1,3 +1,30 @@
+// const { Schema, model } = require("mongoose");
+
+// const userSchema = new Schema(
+//   {
+//     name: {
+//       type: String,
+//       maxLength: 50,
+//       minLength: 5,
+//       required: true,
+//     },
+//     email: {
+//       type: String,
+//       required: true,
+//       unique: true,
+//     },
+//     password: {
+//       type: String,
+//       required: true,
+//     },
+//   },
+//   { timestamps: true, id: true }
+// );
+
+// const User = model("User", userSchema);
+
+// module.exports = User;
+
 const { Schema, model } = require("mongoose");
 
 const userSchema = new Schema(
@@ -17,6 +44,8 @@ const userSchema = new Schema(
       type: String,
       required: true,
     },
+    refreshToken: String,
+    refreshTokenExpiresAt: Date,
   },
   { timestamps: true, id: true }
 );
