# backend/src/routes/index.js
@@ -1,5 +1,6 @@
 const router = require("express").Router();
 const authenticate = require("../middleware/authenticate");
+const authenticateRefresh = require("../middleware/authenticateRefresh");
 const { controllers: authController } = require("../api/v1/auth");
 const { controllers: chatController } = require("../api/v1/chat");
 const { controllers: imageController } = require("../api/v1/image");
@@ -8,7 +9,13 @@ const { controllers: messageController } = require("../api/v1/message");
 // Auth routes
 router
   .post("/api/v1/auth/register", authController.register)
-  .post("/api/v1/auth/login", authController.login);
+  .post("/api/v1/auth/login", authController.login)
+  .post("/api/v1/auth/logout", authenticate, authController.logout)
+  .post(
+    "/api/v1/auth/refresh",
+    authenticateRefresh,
+    authController.refreshToken
+  );
 
 // Chat routes
 router
